// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookingDateRangeFilter matches plain snapshot 1`] = `
<InjectIntl(FilterPlainComponent)
  className={null}
  contentPlacementOffset={-14}
  id="BookingDateRangeFilter.plain"
  initialValues={
    Object {
      "dates": null,
    }
  }
  isSelected={false}
  label="BookingDateRangeFilter.labelPlain"
  liveEdit={true}
  onSubmit={[Function]}
  rootClassName={null}
  urlParam="dates"
>
  <FieldDateRangeController
    className={null}
    controllerRef={[Function]}
    name="dates"
    rootClassName={null}
  />
</InjectIntl(FilterPlainComponent)>
`;

exports[`BookingDateRangeFilter matches popup snapshot 1`] = `
<InjectIntl(FilterPopup)
  className={null}
  contentPlacementOffset={-14}
  id="BookingDateRangeFilter.popup"
  initialValues={
    Object {
      "dates": null,
    }
  }
  isSelected={false}
  label="BookingDateRangeFilter.labelPopup"
  liveEdit={false}
  onSubmit={[Function]}
  rootClassName={null}
  showAsPopup={true}
  urlParam="dates"
>
  <FieldDateRangeController
    className={null}
    controllerRef={[Function]}
    name="dates"
    rootClassName={null}
  />
</InjectIntl(FilterPopup)>
`;
